--- a/example.html
+++ b/example.html
@@ -27,11 +27,9 @@
 
   <div id='map'></div>
 
-  <script type="text/javascript" src="orders.js"></script>
-
   <script type="text/javascript">
 
-    var order_name = 'AUGUSTINIAN_CANONS';
+var order_name = 'AUGUSTINIAN_CANONS';
 
 var map = L.map('map').setView([37.5656, 14.28551], 8);
 
@@ -75,7 +73,7 @@ function style(feature) {
   return {
     weight: 0.8,
     fillOpacity: 0.7,
-    fillColor: getColor(orders[feature.properties.NOME_PRO][order_name])
+    fillColor: getColor(orders_data[feature.properties.NOME_PRO][order_name])
   };
 }
 
@@ -115,17 +113,23 @@ function onEachFeature(feature, layer) {
   });
 }
 
-try {
- $.getJSON("it_sicilia_provinces.geojson", function(data) {
-    geojson = L.geoJson(data, {
+var orders_data, it_provinces_data;
+
+$.when(
+  $.getJSON("orders_data.json", function(data){
+    orders_data = data;
+  }),
+  $.getJSON("it_sicilia_provinces.geojson", function(data) {
+    it_provinces_data = data;
+  })
+).then(function() {
+  if (orders_data && it_provinces_data) {
+    geojson = L.geoJson(it_provinces_data, {
       style: style,
       onEachFeature: onEachFeature
     }).addTo(map);
-  });
-} catch(e){
-  geojson = {};
-  console.log(e)
-}
+  }
+});
 
 map.attributionControl.addAttribution('Monastic order data &copy; <a href="http://www.thehayesweb.org/dhayes/">Dawn Marie Hayes</a>');
 
