--- a/example.html
+++ b/example.html
@@ -12,6 +12,8 @@
 
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
 
+    <script type='text/javascript' src='config.js'></script>
+
     <style>
       #map {
         width: 600px;
@@ -33,7 +35,7 @@ var order_name = 'AUGUSTINIAN_CANONS';
 
 var map = L.map('map').setView([37.5656, 14.28551], 8);
 
-L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/outdoors-v10/tiles/256/{z}/{x}/{y}?access_token=***REMOVED***', {
+L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/outdoors-v10/tiles/256/{z}/{x}/{y}?access_token=' + config.MAPBOX_ACCESS_TOKEN, {
   minZoom: 8,
   maxZoom: 18,
   attribution: 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors, ' +
