--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
       }
     </style>
 
-    <style>#map { width: 800px; height: 500px; }
+    <style font-size: x-small;>#map { width: 800px; height: 500px; }
       .info { padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; }
       .info h4 { margin: 0 0 5px; color: #777; }
       .legend { text-align: left; line-height: 18px; color: #555; width: 130px; }
@@ -44,7 +44,7 @@ var orders = [
   'CISTERCIAN',
   'BASILIAN?',
   'PREMONSTRATENSIAN_CANONS',
-  'KNIGHTS OF THE HOSPITAL',
+  'KNIGHTS_OF_THE_HOSPITAL',
   'CLUNIAC',
   'KNIGHTS_TEMPLAR',
   'HOSPITAL_OF_SAINT_LAZARUS'
