index.html: license note and link to GitHub repo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       boundaries of the modern provinces are used for convenience, while the
       reference area is the whole of Sicily.</p>
     <p>See the <a href="README.md">README file</a> for more information.</p>
+    <p>All code is available via this project's
+      <a href="https://github.com/joephayes/sicilian-monastic-orders-choropleth-map">GitHub repository.</a>
 
     <h2>Instructions</h2>
     <p>Select a monastic order from the dropdown and with your mouse hover over
@@ -55,6 +57,8 @@
     <div id='map'></div>
     <hr>
     <p>&copy; 2017-2018 Joseph P. Hayes</p>
+
+    <p>Released under the MIT license<p>
 
     <script type="text/javascript" src="app.js"></script>
 
