adds email link to copyright

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </label>
     <div id='map'></div>
     <hr>
-    <p>&copy; 2017-2018 Joseph P. Hayes</p>
+    <p>&copy; 2017-2018 <a href="mailto:joephayes@gmail.com">Joseph P. Hayes</a></p>
 
     <p>Released under the MIT license<p>
 
